<resources>
    <string name="app_name">MovieDBDemo</string>

    <string name="title_login">Login</string>
    <string name="title_genres">Genres</string>
    <string name="title_movies_by_genre">Movies By Genre</string>
    <string name="title_get_lists">Created Lists</string>
    <string name="title_list_details">List Details</string>
    <string name="title_favorite_movies">Favorite Movies</string>
    <string name="title_watchlist">Watchlist</string>
    <string name="title_rated_movies">Rated Movies</string>
    <string name="title_details_movie">Details Movie</string>
    <string name="title_popular_movies">Popular Movies</string>
    <string name="title_popular_people">Popular People</string>
    <string name="title_details_people">Person Details</string>
    <string name="title_search_people">Search People</string>
    <string name="title_search_movies">Search Movies</string>

    <string name="login_username">Username</string>
    <string name="login_pass">Password</string>
    <string name="login_btn_text">Login</string>

    <string name="error_title">Error</string>
    <string name="create_list_title">Create List</string>
    <string name="main_header_text">Movie DB</string>

    <string name="tv_fragment_genres">Genres</string>

    <string name="drawer_item_genres">Movie Genres</string>
    <string name="drawer_item_lists">Created Lists</string>
    <string name="drawer_item_favorite">Favorite Movies</string>
    <string name="drawer_item_watchlist">Movies Watchlist</string>
    <string name="drawer_item_rated_movies">Rated Movies</string>
    <string name="drawer_item_popular_movies">Popular Movies</string>
    <string name="drawer_item_popular_people">Popular People</string>
    <string name="drawer_item_search_people">Search People</string>
    <string name="drawer_item_search_movies">Search Movies</string>
    <string name="drawer_item_log_out">Log Out</string>

    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="dialog_name">Name</string>
    <string name="dialog_description">Description</string>
    <string name="dialog_search">Search Request</string>

    <string name="error_movie_overview">Can not find a description of the movie</string>
    <string name="error_movie_release_date">Not found</string>

    <string name="text_delete">Delete</string>
    <string name="item_clear_list">Clear List</string>
    <string name="item_delete_list">Delete List</string>

    <string name="dialog_empty_message">This list is already empty</string>
    <string name="dialog_clear_list_message">Do you really want to clear this list?</string>
    <string name="dialog_delete_list_message">Do you really want to delete this list?</string>
    <string name="dialog_delete_rating_message">Do you really want to delete rating for this movie?</string>
    <string name="dialog_delete_rating_attention_message">You don\'t rated this movie</string>
    <string name="dialog_delete_message">Do you really want to delete:\u0020</string>
    <string name="title_DCA">Choose the action, please:</string>
    <string name="favorite_DCA">Mark as Favorite</string>
    <string name="watchlist_DCA">Add to Watchlist</string>
    <string name="remove_favorite_DCA">Remove from Favorite</string>
    <string name="remove_watchlist_DCA">Remove from Watchlist</string>
    <string name="dialog_rating">Leave your rating, please</string>

    <string name="genres_FDM">Genres:</string>
    <string name="production_companies_FDM">Companies:</string>
    <string name="production_countries_FDM">Countries:</string>

    <string name="popularity_IPP">Popularity:</string>
    <string name="known_for_IPP">Known For</string>

    <string name="known_as_FDP">Known as:\u0020</string>
    <string name="place_of_birth_FDP">Place of Birth:\u0020</string>
    <string name="search_FSP">Search</string>

    <string name="without_internet_message">Internet connection appears to be offline</string>
</resources>
