<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/logo_container_FSI"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_logo_height"
        android:background="@drawable/bg_toolbar_sign_in">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/margin_16"
            android:src="@drawable/main_logo"/>
    </FrameLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/margin_32"
        android:paddingEnd="@dimen/margin_32"
        android:layout_marginTop="@dimen/margin_32">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_user_name_container_FSI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/login_accent_color">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_user_name_FSI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/margin_16"
                android:drawableStart="@drawable/ic_acc_logo"
                android:hint="@string/login_username"
                android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password_container_FSI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/login_accent_color"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/login_accent_color">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_password_FSI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/margin_16"
                android:drawableStart="@drawable/ic_pass_logo"
                android:hint="@string/login_pass"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_login_FSI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_login"
        android:text="@string/login_btn_text"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/margin_32"
        android:layout_marginEnd="@dimen/margin_32"
        android:layout_marginTop="@dimen/margin_32"/>

</LinearLayout>