<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                xmlns:tools="http://schemas.android.com/tools"
                android:background="@color/white"
                android:minWidth="@dimen/margin_300"
                android:padding="@dimen/margin_16">

    <TextView
        android:id="@+id/tvTitle_DS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_15"
        android:fontFamily="sans-serif-medium"
        android:paddingEnd="@dimen/margin_24"
        android:paddingStart="@dimen/margin_24"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/text_size_20"
        android:textStyle="normal"
        tools:text="GPForum"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_search_container_DS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/margin_24"
        android:paddingStart="@dimen/margin_24"
        android:textColorHint="@color/colorAccent"
        android:layout_below="@+id/tvTitle_DS">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiet_search_request_DS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_search"
            android:inputType="text"
            android:maxLength="20"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/ll_DS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end|center_vertical"
        android:orientation="horizontal"
        android:paddingEnd="@dimen/margin_8"
        android:paddingStart="@dimen/margin_8"
        android:layout_below="@+id/til_search_container_DS">

        <TextView
            android:id="@+id/tvPositive_DS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:padding="@dimen/margin_16"
            android:text="@string/button_ok"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_16"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/tvNegative_DS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:padding="@dimen/margin_16"
            android:text="@string/button_cancel"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_16"
            android:textStyle="normal"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_DS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_DS"
        android:paddingEnd="@dimen/margin_24"
        android:paddingStart="@dimen/margin_24"
        android:padding="@dimen/margin_4"/>

</RelativeLayout>